Fix an issue that HLS url for Azure video is not correctly detected

Azure video may have the following url:
http://b028.wpc.azureedge.net/80B028/Samples/a38e6323-95e9-4f1f-9b38-75eba91704e4/5f2ce531-d508-49fb-8152-647eba422aec.ism/Manifest(format=m3u8-aapl-v3)
Use IsHLSURL() instead of IsHLSPath() fixes the issue.
IsHLSURL() could introduce higher false positives.
However, in false positive case the url will be passed to Android MediaPlayer,
which will also play the video for us.

BUG=605691

Review URL: https://codereview.chromium.org/1905133003

Cr-Commit-Position: refs/heads/master@{#388930}

Former-commit-id: bc609e6aaf5e4f7bf7aef788d05e070ad440e9e7